refactor: remove state and trace layers